# metl

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: dependabot.yml
.github/workflows/: cflite-batch.yml  cflite-pr.yml  ci.yml
cmake/: CheckUmbrella.cmake  MetlCcRules.cmake  arm-none-eabi.cmake  metlConfig.cmake.in  riscv-none-elf.cmake
components/metl/: CMakeLists.txt  idf_component.yml
docs/: AUDIT.md  COOKBOOK.md  Doxyfile.in  RFP.md  ROADMAP.md  TODO.md
examples/: CMakeLists.txt  allocators.cpp  blinky_fsm.cpp  can_frame_parser.cpp  containers.cpp  coroutine_task.cpp  error_handling.cpp  mmio_peripheral.cpp  sensor_pipeline.cpp  spsc_isr.cpp
fuzz/: CMakeLists.txt  fuzz_allocators.cpp  fuzz_crc.cpp  fuzz_fixed_string.cpp  fuzz_flat_map.cpp  fuzz_helpers.hpp  fuzz_static_unordered_map.cpp
fuzz/corpus/fuzz_allocators/: seed_arena  seed_static
fuzz/corpus/fuzz_crc/: seed2
fuzz/corpus/fuzz_fixed_string/: seed1  seed2
fuzz/corpus/fuzz_flat_map/: seed1  seed2
fuzz/corpus/fuzz_static_unordered_map/: seed1  seed2
include/metl/: arena_allocator.hpp  assert.hpp  atomic_ref.hpp  attributes.hpp  bit.hpp  bitfield.hpp  compiler.hpp  config.hpp  crc16.hpp  crc32.hpp  crc8.hpp  delegate.hpp  endian.hpp  event_dispatcher.hpp  expected.hpp  fixed_deque.hpp  fixed_function.hpp  fixed_queue.hpp  fixed_stack.hpp  fixed_string.hpp  fixed_vector.hpp  flat_map.hpp  flat_set.hpp  fsm.hpp  function_ref.hpp  hash.hpp  in_place.hpp  intrusive_ptr.hpp  lookup_table.hpp  metl.hpp  mmio.hpp  monotonic_buffer.hpp  object_pool.hpp  optimization.hpp  optional.hpp  register_access.hpp  ring_buffer.hpp  scope_exit.hpp  span.hpp  spsc_queue.hpp  (+7 more)
include/metl/coro/: protothread.hpp  scheduler.hpp  stepper.hpp
include/metl/detail/: construct.hpp
samples/esp-idf/metl_hello/: CMakeLists.txt
samples/esp-idf/metl_hello/main/: CMakeLists.txt  main.cpp
samples/zephyr/metl_hello/: CMakeLists.txt  prj.conf  sample.yaml
samples/zephyr/metl_hello/src/: main.cpp
tests/: allocator_overflow_test.cpp  arena_allocator_test.cpp  assert_test.cpp  atomic_ref_test.cpp  bit_test.cpp  bitfield_test.cpp  compiler_test.cpp  coro_protothread_test.cpp  coro_scheduler_reentrancy_test.cpp  coro_scheduler_test.cpp  coro_stepper_test.cpp  crc16_test.cpp  crc32_test.cpp  crc8_test.cpp  delegate_test.cpp  embedded_smoke.cpp  endian_test.cpp  event_dispatcher_test.cpp  expected_regression_test.cpp  expected_test.cpp  fixed_deque_test.cpp  fixed_function_const_test.cpp  fixed_function_test.cpp  fixed_queue_test.cpp  fixed_stack_test.cpp  fixed_string_test.cpp  fixed_vector_asan_test.cpp  fixed_vector_test.cpp  flat_map_test.cpp  flat_set_test.cpp  fsm_reentrancy_test.cpp  fsm_test.cpp  function_ref_test.cpp  hash_test.cpp  hash_unique_repr_test.cpp  intrusive_ptr_contract_test.cpp  intrusive_ptr_test.cpp  lookup_table_test.cpp  metl_check.hpp  mmio_regression_test.cpp  (+20 more)
tests/embedded/: mps2-an385.ld  semihost_smoke.cpp
zephyr/: CMakeLists.txt  Kconfig  module.yml
